28/28-allow-port.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-from-namespace
  namespace: fubar
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          my-app-key: my-app-value
      podSelector:  # 此处podSelector前不要加 - ，加了则表示furbar 中的pod都可以访问furbar的80端口
        matchLabels: {}
    ports:
    - protocol: TCP
      port: 80
