28/test-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-namespace-selector
  namespace: ns-target
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: ns-app1
    - podSelector:
        matchLabels: {}
    ports:
    - protocol: TCP
      port: 80
